--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+Astrnomy-C/Astrnomy-C/Resources/JSNasaApi.h
+
+Astrnomy-C/Astrnomy-C/Resources/JSNasaApi.m
