--- a/Astronomy/Astronomy/Resources/Info.plist
+++ b/Astronomy/Astronomy/Resources/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To save photos to your Photo Library</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>To save photos to your Photo Library</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
